--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cohere-ai": "^7.16.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "soundfont-player": "^0.12.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "vexflow": "^5.0.0"
