--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@radix-ui/react-slot": "^1.1.2",
     "@tensorflow-models/hand-pose-detection": "^2.0.1",
+    "abcjs": "^6.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cohere-ai": "^7.16.0",
